# GPR5204_919

./: .gitignore  CMakeLists.txt  CONTRIBUTORS.md  LICENSE  README.md  vcpkg.json
.github/workflows/: main.yml
include/: aabb2.h  contact2.h  contact3.h
include/maths/: aabb2.h  aabb3.h  angle.h  circle.h  contact2.h  contact3.h  frustum.h  maths_utils.h  matrix.h  matrix2.h  matrix3.h  matrix4.h  plane.h  ray.h  ray2.h  ray3.h  sphere.h  unique_ptr.h  vector2.h  vector3.h  vector4.h
src/: aabb2.cpp  aabb3.cpp  angle.cpp  circle.cpp  contact2.cpp  contact3.cpp  ray.cpp
src/maths/: aabb2.cpp  aabb3.cpp  contact2.cpp  contact3.cpp  frustum.cpp  matrix.cpp  matrix2.cpp  matrix3.cpp  matrix4.cpp  ray.cpp  ray2.cpp  ray3.cpp  vector2.cpp  vector3.cpp  vector4.cpp
test/: test_aabb2.cpp  test_aabb3.cpp  test_angle.cpp  test_circle.cpp  test_frustum.cpp  test_matrix.cpp  test_matrix2.cpp  test_matrix3.cpp  test_matrix4.cpp  test_plane.cpp  test_ray.cpp  test_shape.cpp  test_sphere.cpp  test_unique_pointer.cpp  test_vector2.cpp  test_vector3.cpp  test_vector4.cpp
